# katgpt-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  domains.toml  release-plz.toml  rust-analyzer.toml
.benchmarks/: 001_hla_eigenbasis_recovery_goat.md  005_g_zero_modelless.md  006_shared_vs_independent_hl.md  007_ropd_rubric_modelless.md  008_sdar_gated_modelless.md  009_arena_integration.md  010_report_the_floor_consolidated.md  010_sdar_arena.md  011_bt_rank_goat.md  011_sdpg_bandit_arena.md  012_replaid_elf_variance_schedules.md  012_tiled_attention_simd.md  013_turboquant_vs_spectralquant_maxsim.md  014_maxsim_rerank_ndcg.md  015_cna_steering.md  016_simpletes_rpucg_goat.md  017_simpletes_scaling_crossstrategy.md  018_d2f_verifier_goat.md  019_diffusion_sampler_goat.md  020_committee_boost_goat.md  020_delta_routing_throughput.md  021_core_hotpath_optimization.md  022_octopus_goat.md  023_block_diagonal_goat.md  023_parallel_probe_goat.md  024_hybrid_oct_pq_goat.md  030_coda_fusion_simd.md  032_dash_attn_routing_goat.md  033_lt2_looped_goat.md  037_rmsd_goat.md  044_plasma_path_goat.md  046_peira_distill_goat.md  057_self_advantage_hla_gate.md  058_funcattn_goat.md  059_sink_aware_goat.md  096_moe_sd_codemodel_goat.md  110_questbench_goat.md  200_corr_budget_goat.md  262_chunked_content_store_goat.md  274_cgsp_goat.md  (+21 more)
.contexts/: research.md
.docs/: 001_echo_research.md  001_loser_sweep_audit.md  01_overview.md  02_architecture.md  03_speculative_decoding.md  04_performance.md  05_sudoku.md  06_validator.md  07_adaptation.md  08_lucebox_techniques.md  09_heuristic-learning.md  10_bomber_arena.md  11_monopoly_fsm.md  12_fft_arena.md  13_mtp_threshold_guide.md  14_go_arena.md  15_go_arena.md  15_paper_feature_comparison.md  16_spechop_architecture.md  18_sleep_consolidation.md  19_kv_compression.md  20_negative_results.md  23_hl_arena_detail.md  faithfulness_probe.md
.issues/: 001_apollonian_sphere_manifold_exploration.md  001_hla_windowed_eigenbasis_recovery.md  001_pruners_optimization.md  002_ac_prefix_super_goat_gate.md  002_deprecate_py_to_rs.md  002_parallax_sigmoid_nan_under_fd_sgd.md  003_ac_prefix_g1_riir_train_dependency.md  004_ane_mil_runtime_compute_pipeline.md  004_percepta_compile_missing_runtime_h.md  005_ane_concat_tap_forward_kernels.md  005_committed_field_blend_default_on_promotion.md  005_stokes_calculus_g_c_turn_penalty.md  006_t6_freeze_thaw_merkle_selfplay_integration.md  006_x86_64_simd_target_feature.md  007_katgpt_rs_cargo_publish_substrate_reorg.md  007_simd_regression_ternary_dense_matmul.md  007_wasm_simd128_coverage_gap.md  008_galerkin_numerical_stability_tricks_subsumed.md  008_subspace_phase_gate_g1_wide_matrix_regression.md  009_ac_prefix_fusion_compute_substrate_gap.md  009_mux_latent_isometric_weighting.md  010_report_the_floor_retroactive_uq_floor_comparison.md  010_seed_route_consensus.md  011_lieflow_fusion_super_goat_investigation.md  011_purge_json_zero_copy_binary.md  011_test_run_remaining_failures.md  012_cross_repo_fv_lean4_rollout_coordinator.md  012_cross_repo_fv_rollout_coordinator.md  013_dec_remove_face_boundary_scan_optimization.md  013_speculative_dry_fork.md  014_msa_arena_ruler_benchmark_infrastructure.md  014_tokenizer_crate_extraction.md  015_extract_katgpt_kv_and_katgpt_spectral.md  015_msa_microbench_metric_refinement.md  016_newton_schulz_borrow_violation.md  016_no_default_features_speculative_reexport_drift.md  017_gauge_invariant_downstream_plan_migration.md  017_plan343_pruners_extraction_test_compile_regression.md  018_inference_router_overline_split.md  018_katgpt_sense_extraction_workspace_build_regression.md  (+38 more)
.plans/: 001_pruners_optimization.md  007_constraint_validator.md  008_katgpt_core_substrate_extraction.md  009_rest_speculative_decoding.md  010_multilayer_transformer.md  011_systems_optimization.md  016_blue_bear_tui.md  020_raven_rsm_kv_cache.md  021_screening_pruner.md  022_sparse_mlp_twell.md  025_bidirectional_prefill_lora_switch.md  026_ppot_logit_resampling.md  027_adaptive_ppot_rescue.md  029_agentic_streaming_lessons.md  030_multi_armed_bandit.md  031_slot_bandit_demo.md  032_heuristic_learning_infrastructure.md  033_bomberman_arena.md  034_bomber_wasm_validator.md  036_inference_time_review_metrics.md  037_wasm_batch_zero_copy.md  038_free_transformer_domain_latent.md  039_game_replay_training_data.md  040_cross_training_techniques_wgpu_burn.md  041_e2e_game_training_pipeline.md  042_ttt_inspired_e2e_feedback_loop.md  043_turboquant_kv_cache_compression.md  044_pflash_block_sparse_speculative_prefill.md  046_better_lora_dynamic_rules_goat.md  047_fft_tactics_arena.md  048_research_audit_fixes.md  049_g_zero_self_play.md  052_gflownet_modelless_distillation.md  (+253 more)
crates/katgpt-attn/: Cargo.toml
crates/katgpt-attn-match/: Cargo.toml
crates/katgpt-attn-match/src/: chunked.rs  compact.rs  lib.rs  online.rs  router.rs  score_matrix_gpu.rs  tests.rs  types.rs
crates/katgpt-attn-match/src/head_budget/: curve.rs
crates/katgpt-attn-match/src/key_selection/: omp.rs
crates/katgpt-attn/src/: lib.rs
crates/katgpt-attn/src/chiaroscuro/: mod.rs
crates/katgpt-attn/src/dash_attn/: chunk_summary.rs  mod.rs  routing.rs
crates/katgpt-attn/src/funcattn_compose/: freeze_thaw.rs  spectral_pre_rotate.rs
crates/katgpt-attn/src/gdn2/: kernel.rs  mod.rs
crates/katgpt-dec/: CHANGELOG.md  Cargo.toml
crates/katgpt-dec/src/: cache.rs  flow.rs  heat_kernel.rs  hodge.rs  lattice_utility.rs  lib.rs  operators.rs  simd.rs  stokes_calculus.rs  terrain_cochains.rs  types.rs
crates/katgpt-hla/: CHANGELOG.md  Cargo.toml
crates/katgpt-hla/src/: kernel.rs  lib.rs  types.rs
crates/katgpt-spectral/: Cargo.toml
crates/katgpt-spectral/src/: forward.rs  lib.rs  nonuniform_quant.rs  procrustes.rs  spectral.rs  spectral_kv_cache.rs  spectral_rotation.rs
crates/katgpt-speculative/: Cargo.toml
crates/katgpt-speculative/src/: dd_tree.rs  dflash.rs  lib.rs
crates/katgpt-transformer/: CHANGELOG.md  Cargo.toml
crates/katgpt-transformer/src/: context.rs  kv_cache.rs  mtp.rs  weights.rs
examples/: README.md  (+113 more)
(+1163 files in other folders)
