[package]
name = "katgpt-dec"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Discrete Exterior Calculus substrate — exterior derivative, codifferential, Hodge Laplacian/decomposition, Stokes calculus, lattice utility. Pure math, no app semantics."
repository = "https://github.com/katopz/katgpt-rs"
keywords = ["dec", "stokes", "hodge", "exterior-calculus", "cochains"]
categories = ["mathematics", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# Zero dependencies. katgpt-dec is a pure-math substrate that ships its own
# minimal SIMD kernels (simd.rs) so it can be re-exported by katgpt-core as
# `katgpt_core::dec` without creating a cyclic package dependency. The two
# kernels (simd_dot_f32, simd_sigmoid_inplace) are bit-compatible scalar
# fallbacks matching katgpt-core's implementations.

[features]
# katgpt-dec compiles its core DEC code unconditionally — the crate's entire
# purpose is DEC. The historical pass-through tracking flags (`dec_terrain_ai`,
# `lattice_utility`, `interest_cochain`) were removed on 2026-06-28 (katgpt-rs
# Issue 008): the eggshell IP they tracked was migrated to the private
# `riir-neuron-db` crate (`dec_arena` module). The remaining katgpt-core
# `dec_operators` flag enables this crate.
#
# `motor_gated_field` (Plan 357, Research 359) is the one opt-in primitive
# inside this crate: the Amari-style motor-gated neural-field evolution step
# (`evolve_motor_gated_field`). It composes the existing DEC surface
# (`hodge_laplacian` / `graph_laplacian_into`) + a ReLU gate + a per-channel
# motor gain — no new deps. Stays opt-in by design (it's a primitive, not a
# default-on capability); promotion to downstream consumption (riir-ai
# Research 168) is gated on the Plan 357 Phase 2 GOAT (G1–G5).
#
# `heat_kernel_trajectory` (Plan 359, Research 365) is the second opt-in
# primitive: the single-shot DEC heat-kernel trajectory predictor
# (`exp(t·A)·h₀` via precomputed eigendecomposition). It distills PhysiFormer's
# single-shot-vs-autoregressive insight (arXiv:2606.27364) into a modelless DEC
# analog — exact for linear propagation, zero error accumulation. Stays opt-in
# until the Plan 359 Phase 5 GOAT gate (G1–G5) lands; the linear path (Phase 1)
# is the promotion candidate.
default = []
motor_gated_field = []
heat_kernel_trajectory = []
